fix: text invisible when highlighting

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -6,6 +6,10 @@ body {
   margin: 0;
 }
 
+body {
+  margin: 0;
+}
+
 /* STYLING FÜR LANDING */
 #presentation-container {
   height: 100vh;
